--- a/src/app/pages/user-profile/user-profile.html
+++ b/src/app/pages/user-profile/user-profile.html
@@ -1,20 +1,27 @@
 <section class="user-profile">
+
+    <div class="errorMesagge">
+        @if (errorMessage) {
+        <div class="alert-error">
+            {{ errorMessage }}
+        </div>
+        }
+    </div>
+
     <header class="title-container">
         <h2 class="title">Perfil</h2>
     </header>
 
     <article class="profile-content">
-        <div class="personal-info">
+        <div class="info">
             <app-profile-info [title]="'Información personal'" [data]="personalInfo"></app-profile-info>
         </div>
 
-        <div class="profesional-info">
+        <div class="info">
             <app-profile-info [title]="'Información profesional'" [data]="profesionalInfo"></app-profile-info>
         </div>
 
-        <div class="btn-edit">
-            <button class="btn">Editar</button>
-        </div>
+        <button class="edit-btn">Editar</button>
     </article>
 
 </section>
