--- a/src/app/pages/patient/components/info/main-info/main-info.html
+++ b/src/app/pages/patient/components/info/main-info/main-info.html
@@ -2,6 +2,7 @@
   <div class="edit-wrap">
     <img src="assets/iconos/edit.png" alt="" class="edit-icon">
   </div>
+
+  <app-top-info [patient]="patient"></app-top-info>
+  <app-bottom-info [patient]="patient"></app-bottom-info>
 </div>
-<app-top-info></app-top-info>
-<app-bottom-info></app-bottom-info>
