--- a/src/app/pages/patient/components/info/main-info/top-info/top-info.css
+++ b/src/app/pages/patient/components/info/main-info/top-info/top-info.css
@@ -15,3 +15,13 @@
   width: 100px;
   height: 100px;
 }
+
+h4{
+  margin-top: 10px;
+  font-size: 1.2rem;
+  color: var(--primary-color);
+}
+span{
+  font-size: 1rem;
+  color: var(--secondary-color);
+}
