--- a/src/app/pages/patient/components/info/main-info/top-info/top-info.html
+++ b/src/app/pages/patient/components/info/main-info/top-info/top-info.html
@@ -1,3 +1,3 @@
-<img src="assets/otros/women-avatar.png" class="avatar">
-<h4>Alicia Jacqueline</h4>
-<span>Ocana Laguna</span>
+<img [src]="getAvatarUrl(patient.patient.genderId)" class="avatar" alt="Avatar del paciente">
+<h4>{{ patientName }}</h4>
+<span>{{ patientLastName }}</span>
