--- a/src/app/pages/patient/components/info/side-info/side-info.html
+++ b/src/app/pages/patient/components/info/side-info/side-info.html
@@ -6,16 +6,16 @@
 <dl>
   <div class="row">
     <dt>Antecedentes:</dt>
-    <dd><b>Anorexia nerviosa, cancer de estomago</b></dd>
+    <dd><b>{{ medicalHistoriesText }}</b></dd>
   </div>
   <hr>
   <div class="row">
     <dt>Alergias:</dt>
-    <dd><b>Antihistaminicos, Penicilina, Antiinflamatorios</b></dd>
+    <dd><b>{{ allergiesText }}</b></dd>
   </div>
   <hr>
   <div class="row">
     <dt>Enfermedades:</dt>
-    <dd><b>Diabetes tipo II, Ansiedad, Asma</b></dd>
+    <dd><b>{{ diseasesText }}</b></dd>
   </div>
 </dl>
