--- a/src/app/pages/dashboard/dashboard.html
+++ b/src/app/pages/dashboard/dashboard.html
@@ -4,13 +4,13 @@
     </header>
 
     <div class="search-content">
-        <app-filter></app-filter>
-        <app-search-bar></app-search-bar>
+        <app-filter (onFilter)="onFilter($event)"></app-filter>
+        <app-search-bar (onSearch)="onSearch(searchTerm)"></app-search-bar>
     </div>
 
     <section class="cards-container">
-        @for (patient of filteredPatients; track patient.id){
-        <app-patient-card [patient]="patient"></app-patient-card>
+        @for (patient of filteredPatients; track trackByPatientId($index, patient)){
+        <app-patient-card [patient]="patient" (patientDeleted)="onPatientDeleted($event)"></app-patient-card>
     }
     </section>
 
