i made the forms on the wrong branch

--- a/src/app/pages/patient/components/appointments/top-bar/top-bar.html
+++ b/src/app/pages/patient/components/appointments/top-bar/top-bar.html
@@ -1,5 +1,10 @@
 <div class="top">
   <h3>Consultas</h3>
-  <button><span><b>Añadir</b></span><img src="assets/iconos/add-appointment.png" class="btn-icon"></button>
+  <button (click)="routeToAppointmentCreation()" class="btn btn-add-appointment">
+    <span>
+      <b>Añadir</b>
+    </span>
+    <img src="assets/iconos/add-appointment.png" class="btn-icon">
+  </button>
 </div>
 <p>Selecciona una consulta para ver mas detalles</p>
