--- a/src/app/pages/notes-register/notes-container/notes-container.css
+++ b/src/app/pages/notes-register/notes-container/notes-container.css
@@ -34,3 +34,16 @@
   justify-content: flex-end;
   gap: 2%;
 }
+
+.notes-container.centered{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  vertical-align: center;
+}
+
+.notes-container{
+  display: flex;
+  flex-direction: column;
+}
