--- a/src/app/pages/notes-register/notes-register.css
+++ b/src/app/pages/notes-register/notes-register.css
@@ -7,17 +7,23 @@
   height: 100%;
   width: 100%;
   display: grid;
-  grid-template-columns:64% 34%;
+  grid-template-columns: 64% 34%;
   grid-template-rows: 100%;
   grid-column-gap: 2%;
   box-sizing: border-box;
 }
 
-.notes{
+main{
   height: 100%;
   width: 100%;
-  border: 1px solid rgba(0, 0, 0, 0.2);
-  border-radius: 20px;
-  padding: 2%;
-  box-sizing: border-box;
+  display: grid;
+  grid-template-rows: auto 1fr;
+  grid-template-columns: 100%;
+}
+
+.note-form{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 3%;
 }
