--- a/src/app/pages/anthropometric-measurements/anthropometric-measurements.css
+++ b/src/app/pages/anthropometric-measurements/anthropometric-measurements.css
@@ -1,23 +1,72 @@
-.measurements{
+.measurements {
     display: flex;
     flex-direction: column;
     margin: 0 auto;
 }
 
-.title{
+.title {
     font-size: 50px;
 }
 
-.title-container{
+.title-container {
     margin-top: -50px;
     margin-bottom: -24px;
     display: flex;
     align-items: center;
 }
 
-app-step-indicator{
+app-step-indicator {
     align-self: center;
     max-width: 400px;
     margin-left: 200px;
     margin-top: 25px;
+}
+
+.buttons-container {
+    display: flex;
+    flex-direction: row;
+    gap: 2%;
+    justify-content: flex-end;
+    align-items: flex-end;
+    margin-right: 60px;
+}
+
+.back {
+    padding: 18px 32px;
+    font-size: 16px;
+    font-weight: 600;
+    color: rgb(0, 0, 0);
+    background-color: #E6E6E6;
+    border: none;
+    border-radius: 6px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.215);
+}
+
+.back:hover {
+    box-shadow: 0 4px 8px rgba(118, 118, 118, 0.3);
+}
+
+
+.next {
+    padding: 18px 32px;
+    font-size: 16px;
+    font-weight: 600;
+    color: white;
+    background-color: var(--primary-color);
+    border: none;
+    border-radius: 6px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.215);
+}
+
+.next:hover {
+    background-color: var(--primary-color);
+    box-shadow: 0 4px 8px rgba(93, 171, 168, 0.3);
 }
