--- a/src/app/pages/anthropometric-measurements/components/step-two/step-two.html
+++ b/src/app/pages/anthropometric-measurements/components/step-two/step-two.html
@@ -1,16 +1,51 @@
-<div class="step-container">
-    <h2>Medidas de pliegues</h2>
-
-    <div class="form-grid" [formGroup]="form">
-        @for (field of fields; track field.name) {
-        <div class="form-field">
-            <input [id]="field.name" [formControlName]="field.name" [type]="field.type"
-                [placeholder]="field.placeholder" [step]="field.step" [class.error]="isFieldInvalid(field.name)" />
-
-            @if (isFieldInvalid(field.name)) {
-            <span class="error-message">Valor inválido</span>
-            }
+<form class="step-two-layout" [formGroup]="form">
+    <div class="left-column">
+        <div class="skinfold-field">
+            <label>Bíceps</label>
+            <input type="number" formControlName="biceps" placeholder="Ingrese el pliegue" step="0.1" />
         </div>
-        }
+
+        <div class="skinfold-field">
+            <label>Suprailíaco</label>
+            <input type="number" formControlName="suprailiaco" placeholder="Ingrese el pliegue" step="0.1" />
+        </div>
+
+        <div class="skinfold-field">
+            <label>Abdominal</label>
+            <input type="number" formControlName="abdominal" placeholder="Ingrese el pliegue" step="0.1" />
+        </div>
+
+        <div class="skinfold-field">
+            <label>Pectoral</label>
+            <input type="number" formControlName="pectoral" placeholder="Ingrese el pliegue" step="0.1" />
+        </div>
     </div>
-</div>
+
+    <div class="center-column">
+        <app-avatar-1></app-avatar-1>
+    </div>
+
+    <div class="right-column">
+
+        <div class="skinfold-field">
+            <label>Tríceps</label>
+            <input type="number" formControlName="triceps" placeholder="Ingrese el pliegue" step="0.1" />
+        </div>
+
+        <div class="skinfold-field">
+            <label>Subescapular</label>
+            <input type="number" formControlName="subescapular" placeholder="Ingrese el pliegue" step="0.1" />
+        </div>
+
+        <div class="skinfold-field">
+            <label>Ileocrestal</label>
+            <input type="number" formControlName="ileocrestal" placeholder="Ingrese el pliegue" step="0.1" />
+        </div>
+
+        <div class="skinfold-field">
+            <label>Axilar medial</label>
+            <input type="number" formControlName="axilaMedial" placeholder="Inserte el pliegue" step="0.1" />
+        </div>
+    </div>
+
+</form>
