correccion del layout principal, lista de notas (temporal)

--- a/src/app/pages/notes-register/note/note.html
+++ b/src/app/pages/notes-register/note/note.html
@@ -1,1 +1,5 @@
-
+<p class="info">{{description}}</p>
+<div class="category-container">
+  <img [src]="getIconPath(categoryId)">
+  <span>{{getCategory(categoryId)}}</span>
+</div>
