--- a/src/app/pages/notes-register/notes-register.css
+++ b/src/app/pages/notes-register/notes-register.css
@@ -7,10 +7,11 @@
   height: 100%;
   width: 100%;
   display: grid;
-  grid-template-columns: 64% 34%;
+  grid-template-columns: 63% 34%;
   grid-template-rows: 100%;
   grid-column-gap: 2%;
   box-sizing: border-box;
+  overflow: hidden;
 }
 
 main{
