vista de detalles de notas creada

--- a/src/app/pages/notes-register/note/note.html
+++ b/src/app/pages/notes-register/note/note.html
@@ -1,5 +1,5 @@
 <p class="info">{{description}}</p>
 <div class="category-container">
-  <img [src]="getIconPath(categoryId)">
+  <img [src]="getIconPath(categoryId)" class="icon">
   <span>{{getCategory(categoryId)}}</span>
 </div>
