--- a/src/app/pages/notes-register/note/note.css
+++ b/src/app/pages/notes-register/note/note.css
@@ -13,6 +13,7 @@
   box-sizing: border-box;
   gap: 10px;
   box-shadow: 5px 5px 5px rgba(0,0,0,0.15);
+  margin-bottom: 15px;
 }
 
 .category-container{
@@ -30,4 +31,20 @@
 
 .info{
   font-weight: 600;
+}
+
+.icon{
+  height: 100%;
+}
+
+:host(.details-view){
+  height: 200px;
+  width: 30%;
+  display: grid;
+  grid-template-columns: 100%;
+  grid-template-rows: 1fr auto;
+
+  .info{
+    align-self: center;
+  }
 }
