--- a/src/app/pages/notes-register/details/details.css
+++ b/src/app/pages/notes-register/details/details.css
@@ -6,10 +6,22 @@
   grid-template-rows: auto 1fr auto;
 }
 
+.notes-container{
+  height: 100%;
+  width: 100%;
+  display: grid;
+  grid-auto-flow: column;
+  grid-auto-rows: minmax(0,1fr);
+  grid-template-rows: repeat(2, minmax(0,1fr));
+  gap: 30px;
+  overflow-x: auto;
+  overflow-y: hidden;
+  box-sizing: border-box;
+}
 
 .buttons-footer{
   width: 100%;
   display: flex;
   justify-content: flex-end;
-  gap: 2%;
+  gap: 10px;
 }
