--- a/src/app/pages/notes-register/note/note.css
+++ b/src/app/pages/notes-register/note/note.css
@@ -4,6 +4,12 @@
 }
 
 :host{
+  display: block;
+  width: auto;
+  height: auto;
+}
+
+main{
   width: 98%;
   display: flex;
   flex-direction: column;
@@ -37,9 +43,10 @@
   height: 100%;
 }
 
-:host(.details-view){
-  height: 200px;
-  width: 30%;
+:host(.details-view) main{
+  min-height: 200px;
+  min-width: 400px;
+  max-width: 410px;
   display: grid;
   grid-template-columns: 100%;
   grid-template-rows: 1fr auto;
