--- a/src/app/pages/notes-register/note/note.css
+++ b/src/app/pages/notes-register/note/note.css
@@ -7,6 +7,7 @@
   display: block;
   width: auto;
   height: auto;
+
 }
 
 main{
@@ -20,6 +21,13 @@ main{
   gap: 10px;
   box-shadow: 5px 5px 5px rgba(0,0,0,0.15);
   margin-bottom: 15px;
+  transition: 100ms all ease-out;
+}
+
+main:hover{
+  background-color: rgba(0,0,0,0.05);
+  cursor: pointer;
+  transition: 100ms all ease-in;
 }
 
 .category-container{
