avatar default changed

--- a/src/app/pages/anthropometric-measurements/components/step-one/step-one.html
+++ b/src/app/pages/anthropometric-measurements/components/step-one/step-one.html
@@ -27,7 +27,7 @@
     </div>
 
     <div class="center-column">
-        <app-avatar-1></app-avatar-1>
+        <app-default></app-default>
     </div>
 
     <div class="right-column">
@@ -66,13 +66,8 @@
         </div>
 
         <div class="circumference-field">
-            <label>Muslo superior</label>
-            <input type="number" formControlName="muslo" placeholder="Ingrese la circunferencia del muslo" step="0.1" />
-        </div>
-
-        <div class="circumference-field">
-            <label>Muslo inferior</label>
-            <input type="number" formControlName="muslo" placeholder="Ingrese la circunferencia del muslo" step="0.1" />
+            <label>Muslo</label>
+            <input type="number" formControlName="muslo" placeholder="Ingrese la circunferencia del muslo superior" step="0.1" />
         </div>
     </div>
 
