--- a/src/app/pages/anthropometric-measurements/components/step-three/step-three.html
+++ b/src/app/pages/anthropometric-measurements/components/step-three/step-three.html
@@ -31,7 +31,7 @@
   </div>
 
   <div class="center-column">
-    <app-avatar-1></app-avatar-1>
+    <app-default></app-default>
   </div>
 
   <div class="right-column">
