--- a/src/app/pages/anthropometric-measurements/components/step-two/step-two.html
+++ b/src/app/pages/anthropometric-measurements/components/step-two/step-two.html
@@ -22,7 +22,7 @@
     </div>
 
     <div class="center-column">
-        <app-avatar-1></app-avatar-1>
+        <app-default></app-default>
     </div>
 
     <div class="right-column">
