por alguna razon no jalo el otro commit

--- a/src/app/pages/anthropometric-measurements/anthropometric-measurements.css
+++ b/src/app/pages/anthropometric-measurements/anthropometric-measurements.css
@@ -29,6 +29,7 @@ app-step-indicator {
     justify-content: flex-end;
     align-items: flex-end;
     margin-right: 60px;
+    margin-top: -6% ;
 }
 
 .back {
