--- a/src/app/pages/stats-view/stats-view.css
+++ b/src/app/pages/stats-view/stats-view.css
@@ -6,4 +6,21 @@
 :host{
   width: 100%;
   height: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  box-sizing: border-box;
+}
+
+.back-button{
+  color: var(--primary-color);
+  font-weight: bold;
+  font-size: larger;
+  transition: 100ms all ease-out;
+}
+
+.back-button:hover{
+  color: var(--hover-color);
+  cursor: pointer;
+  transition: 100ms all ease-in;
 }
