--- a/src/app/pages/stats-view/stats-view.css
+++ b/src/app/pages/stats-view/stats-view.css
@@ -6,9 +6,10 @@
 :host{
   width: 100%;
   height: 100%;
-  display: flex;
-  flex-direction: column;
-  gap: 5px;
+  display: grid;
+  grid-template-rows: auto auto auto auto 1fr;
+  grid-template-columns: 100%;
+  row-gap: 5px;
   box-sizing: border-box;
 }
 
