--- a/src/app/shared/components/sidebar/sidebar.css
+++ b/src/app/shared/components/sidebar/sidebar.css
@@ -17,17 +17,20 @@
 }
 
 .logo-wrapper {
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
+    width: 100%;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: flex-start;
+    padding-left: 20px; 
     margin-bottom: 40px;
-    flex-shrink: 0;
 }
 
-.logo, .view_all, .reviews {
+
+.logo {
+    width: 55px;
+    height: 55px;
+    
+}
+.view_all, .reviews {
     width: 35px;
     height: 35px;
 }
