--- a/src/app/shared/components/login-modal/login-modal.html
+++ b/src/app/shared/components/login-modal/login-modal.html
@@ -66,7 +66,8 @@
                 type="button"
                 class="continue" 
                 (click)="onContinuar()"
-                [disabled]="isSubmitting">
+                [disabled]="isSubmitting"
+                (keypress.enteres)="onContinuar()">
                 {{ isSubmitting ? 'Cargando...' : 'Continuar' }}
             </button>
 
