--- a/src/app/shared/components/sidebar/sidebar.html
+++ b/src/app/shared/components/sidebar/sidebar.html
@@ -14,7 +14,7 @@
             <span class="label">Pacientes</span>
         </a>
 
-        <a class="nav-item" routerLink="/reviews">
+        <a class="nav-item" routerLink="/reviews/promedio">
             <img class="reviews" src="assets/iconos/reviews-icon.png" alt="">
             <span class="label">Valoraciones</span>
         </a>
