--- a/src/app/pages/reviews/review-rating/review-rating.css
+++ b/src/app/pages/reviews/review-rating/review-rating.css
@@ -43,3 +43,15 @@
   align-self: center;
 }
 
+.loading-section {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-self: center;
+  padding: 3rem;
+}
+
+.loading-section p {
+  color: #999;
+  font-size: 1.125rem;
+}
