--- a/src/app/pages/dashboard/components/search-bar/search-bar.html
+++ b/src/app/pages/dashboard/components/search-bar/search-bar.html
@@ -1,5 +1,5 @@
 <div class="search-for">
-    <input type="search" placeholder="Busque a su paciente" (input)="onSearch($event)">
+    <input type="text" placeholder="Busque a su paciente" (input)="onSearch($event)">
     <button class="search_button" type="submit" (keyup.enter)="onSearchSubmit($event)">
         <i class="fa fa-search"></i>
     </button>
