--- a/src/app/pages/dashboard/dashboard.html
+++ b/src/app/pages/dashboard/dashboard.html
@@ -4,8 +4,8 @@
     </header>
 
     <div class="search-content">
-        <app-filter (onFilter)="onFilter($event)"></app-filter>
-        <app-search-bar (onSearch)="onSearch(searchTerm)"></app-search-bar>
+        <app-filter></app-filter>
+        <app-search-bar></app-search-bar>
     </div>
 
     <section class="cards-container">
