--- a/src/app/pages/dashboard/components/filter/filter.html
+++ b/src/app/pages/dashboard/components/filter/filter.html
@@ -4,8 +4,8 @@
         <i class="fa fa-chevron-down"></i>
     </button>
     <div class="dropdown_content" [class.show]="menuOpen">
-        <a href="#">Recién Agregado</a>
-        <a href="#">De la A a la Z</a>
-        <a href="#">De la Z a la A</a>
+        <a href="#" (click)="applyFilter('recent', 'Recién agregado'); $event.preventDefault()">Recién Agregado</a>
+        <a href="#" (click)="applyFilter('nameAsc', 'De la A a la Z'); $event.preventDefault()">De la A a la Z</a>
+        <a href="#" (click)="applyFilter('nameDesc', 'De la Z a la A'); $event.preventDefault()">De la Z a la A</a>
     </div>
 </div>
